<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".MainFragment">

	<Spinner
		android:id="@+id/spinner2"
		android:layout_width="0dp"
		android:layout_height="36dp"
		android:layout_marginTop="62dp"
		android:layout_marginEnd="68dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/textView4"
		app:layout_constraintTop_toBottomOf="@+id/textView2" />

	<TextView
		android:id="@+id/textView"
		android:layout_width="412dp"
		android:layout_height="91dp"
		android:layout_marginTop="16dp"
		android:layout_marginBottom="90dp"
		android:gravity="center"
		android:text="@string/welcome"
		android:textSize="20dp"
		app:layout_constraintBottom_toTopOf="@+id/textView2"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<Spinner
		android:id="@+id/spinner1"
		android:layout_width="0dp"
		android:layout_height="36dp"
		android:layout_marginEnd="68dp"
		app:layout_constraintBottom_toTopOf="@+id/textView2"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/textView2"
		app:layout_constraintTop_toTopOf="@+id/textView2" />

	<TextView
		android:id="@+id/textView2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="50dp"
		android:layout_marginEnd="12dp"
		android:layout_marginBottom="71dp"
		android:text="@string/select_country1"
		app:layout_constraintBottom_toTopOf="@+id/textView4"
		app:layout_constraintEnd_toStartOf="@+id/spinner1"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView" />

	<TextView
		android:id="@+id/textView3"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="50dp"
		android:layout_marginEnd="59dp"
		android:layout_marginBottom="81dp"
		android:text="@string/select_stat"
		app:layout_constraintBottom_toTopOf="@+id/button"
		app:layout_constraintEnd_toStartOf="@+id/spinnerStat"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView4" />

	<Spinner
		android:id="@+id/spinnerStat"
		android:layout_width="0dp"
		android:layout_height="36dp"
		android:layout_marginTop="124dp"
		android:layout_marginEnd="68dp"
		android:layout_marginBottom="120dp"
		app:layout_constraintBottom_toBottomOf="@+id/button"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/textView3"
		app:layout_constraintTop_toTopOf="@+id/spinner2"
		app:layout_constraintVertical_bias="0.0" />

	<TextView
		android:id="@+id/textView4"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="50dp"
		android:layout_marginEnd="8dp"
		android:layout_marginBottom="96dp"
		android:text="@string/select_country2"
		app:layout_constraintBottom_toTopOf="@+id/textView3"
		app:layout_constraintEnd_toStartOf="@+id/spinner2"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView2" />

	<Button
		android:id="@+id/button"
		android:layout_width="145dp"
		android:layout_height="0dp"
		android:layout_marginBottom="24dp"
		android:onClick="onClick"
		android:text="@string/button_text"
		app:layout_constraintBottom_toTopOf="@+id/imageView"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView3" />

	<ImageView
		android:id="@+id/imageView"
		android:layout_width="196dp"
		android:layout_height="0dp"
		android:layout_marginBottom="16dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/button"
		app:srcCompat="@drawable/globe" />


</androidx.constraintlayout.widget.ConstraintLayout>